--- a/examples/canary/canary-rollout.yaml
+++ b/examples/canary/canary-rollout.yaml
@@ -30,7 +30,7 @@ spec:
       canaryService: canary-demo-preview
       steps:
       - setWeight: 20
-      - pause: {}
+      - pause: {duration: 40}
       - setWeight: 40
       - pause: {duration: 10}
       - setWeight: 60
