--- a/examples/canary/canary-rollout.yaml
+++ b/examples/canary/canary-rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: canary-demo
-        image: argoproj/rollouts-demo:blue
+        image: argoproj/rollouts-demo:green
         imagePullPolicy: Always
         ports:
         - name: http
@@ -30,7 +30,7 @@ spec:
       canaryService: canary-demo-preview
       steps:
       - setWeight: 20
-      - pause: {duration: 40}
+      - pause: {}
       - setWeight: 40
       - pause: {duration: 10}
       - setWeight: 60
